NIFI-12037 Changed List.of to Collections.singletonList for Java 8
Signed-off-by: David Handermann <exceptionfactory@apache.org>